syntax = "proto3";

package proto;

option java_package = "com.hedera.hcslib.proto.java";
option java_multiple_files = true;

message AccountID {
    int64 shardNum = 1; //The shard number (nonnegative)
    int64 realmNum = 2; //The realm number (nonnegative)
    int64 accountNum = 3; //A nonnegative account number unique within its realm
}

message TransactionID {
    Timestamp transactionValidStart = 1; // The transaction is invalid if consensusTimestamp < transactionID.transactionStartValid
    AccountID accountID = 2; //The Account ID that paid for this transaction
}

message Timestamp {
    int64 seconds = 1; // Number of complete seconds since the start of the epoch
    int32 nanos = 2; // Number of nanoseconds since the start of the last second
}

// a complete message containing data provided by an app to the library
message ApplicationMessage {
    TransactionID applicationMessageId = 1;
    bytes businessProcessMessage = 2;
    bytes businessProcessHash = 3;
    bytes businessProcessSignature = 4;
}

// parts of a complete message
message ApplicationMessageChunk {
    TransactionID applicationMessageId = 1;
    int32 chunksCount = 2; // The total number of parts to make up a complete message
    int32 chunkIndex = 3; // This message part index
    bytes messageChunk = 4; // The message part
}
